--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -352,7 +352,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/primary"
-        android:visibility="visible"
+        android:visibility="gone"
         >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/productsRecyclerView"
