--- a/app/src/main/res/layout/activity_custom_product.xml
+++ b/app/src/main/res/layout/activity_custom_product.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".ui.screens.MyProductActivity">
+    tools:context=".ui.screens.customProductActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productsRecyclerView"
