--- a/app/src/main/res/layout/dialog_product_custom.xml
+++ b/app/src/main/res/layout/dialog_product_custom.xml
@@ -97,12 +97,13 @@
                 android:orientation="horizontal"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginVertical="13dp">
-                <Button
+
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/saveNewProductItemButton"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/selfSearch"
+                    android:backgroundTint="@color/primary"
                     android:text="@string/add_product"
                     android:textColor="@color/primaryText"
                     />
