--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -13,6 +13,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
+    android:descendantFocusability="blocksDescendants"
     android:background="@drawable/list_item_background">
 <LinearLayout
     android:id="@+id/icons_container"
