refactor: Update spinner_item.xml text size unit
This commit changes the text size unit from `dp` to `sp` in the `spinner_item.xml` layout file to respect user font size preferences.

--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:textColor="@color/primaryText"
-    android:textSize="18dp"
+    android:textSize="18sp"
     android:background="@color/secondary"
     android:textAlignment="inherit"/>
 
