--- a/app/src/main/res/animator/grow_and_half_flip.xml
+++ b/app/src/main/res/animator/grow_and_half_flip.xml
@@ -4,25 +4,25 @@
     <!-- הגדלה -->
     <set android:ordering="together">
         <objectAnimator
+            android:duration="200"
+            android:interpolator="@android:interpolator/accelerate_decelerate"
             android:propertyName="scaleX"
             android:valueFrom="1"
-            android:valueTo="1.15"
-            android:duration="200"
-            android:interpolator="@android:interpolator/accelerate_decelerate" />
+            android:valueTo="1.15" />
         <objectAnimator
+            android:duration="200"
+            android:interpolator="@android:interpolator/accelerate_decelerate"
             android:propertyName="scaleY"
             android:valueFrom="1"
-            android:valueTo="1.15"
-            android:duration="200"
-            android:interpolator="@android:interpolator/accelerate_decelerate" />
+            android:valueTo="1.15" />
     </set>
 
     <!-- סיבוב חצי ראשון -->
     <objectAnimator
+        android:duration="250"
+        android:interpolator="@android:interpolator/accelerate_decelerate"
         android:propertyName="rotationY"
         android:valueFrom="0"
-        android:valueTo="90"
-        android:duration="250"
-        android:interpolator="@android:interpolator/accelerate_decelerate" />
+        android:valueTo="90" />
 
 </set>
