--- a/app/src/main/res/animator/half_flip_and_shrink.xml
+++ b/app/src/main/res/animator/half_flip_and_shrink.xml
@@ -3,26 +3,26 @@
 
     <!-- סיבוב חצי שני -->
     <objectAnimator
+        android:duration="250"
+        android:interpolator="@android:interpolator/accelerate_decelerate"
         android:propertyName="rotationY"
         android:valueFrom="-90"
-        android:valueTo="0"
-        android:duration="250"
-        android:interpolator="@android:interpolator/accelerate_decelerate" />
+        android:valueTo="0" />
 
     <!-- הקטנה חזרה -->
     <set android:ordering="together">
         <objectAnimator
+            android:duration="200"
+            android:interpolator="@android:interpolator/accelerate_decelerate"
             android:propertyName="scaleX"
             android:valueFrom="1.15"
-            android:valueTo="1"
-            android:duration="200"
-            android:interpolator="@android:interpolator/accelerate_decelerate" />
+            android:valueTo="1" />
         <objectAnimator
+            android:duration="200"
+            android:interpolator="@android:interpolator/accelerate_decelerate"
             android:propertyName="scaleY"
             android:valueFrom="1.15"
-            android:valueTo="1"
-            android:duration="200"
-            android:interpolator="@android:interpolator/accelerate_decelerate" />
+            android:valueTo="1" />
     </set>
 
 </set>
