--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -10,22 +10,22 @@
     <!-- כותרת עליונה - כתומה (חיפוש עצמי) -->
 
     <RelativeLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/topBar"
         android:background="@color/primary">
 
         <TextView
-            app:drawableEndCompat="@drawable/ic_baseline_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/self_search"
-            android:textSize="25sp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:paddingVertical="2.5dp"
+            android:text="@string/self_search"
             android:textColor="@color/primaryText"
-            android:textStyle="bold" />
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:drawableEndCompat="@drawable/ic_baseline_search" />
 
         <ImageButton
             android:id="@+id/backBtn"
@@ -36,16 +36,15 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/back"
             android:padding="8dp"
-            android:src="@drawable/round_arrow_back"
-            />
+            android:src="@drawable/round_arrow_back" />
     </RelativeLayout>
 
     <!-- מסך "יצירת מוצר חדש" (אתר) -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:layout_below="@id/topBar">
+        android:layout_below="@id/topBar"
+        android:background="@android:color/transparent">
 
 
         <RelativeLayout
@@ -54,24 +53,24 @@
 
             <WebView
                 android:id="@+id/webview"
-                android:visibility="visible"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:visibility="visible" />
         </RelativeLayout>
 
         <ScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent"
-            android:layout_alignParentEnd="true"
             android:windowSoftInputMode="adjustResize">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:background="@android:color/transparent"
+                android:orientation="vertical"
                 android:padding="0dp">
 
                 <!-- כפתור לפתיחת כרטיסיית חיפוש עצמי (כתום) -->
@@ -79,9 +78,9 @@
                     android:id="@+id/showDialogSheet"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="end"
                     android:layout_margin="8dp"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_gravity="end"
                     android:background="@drawable/circle_orang_background"
                     android:contentDescription="@string/show_add_product_dialog"
                     android:src="@drawable/baseline_arrow_drop_up_white"
@@ -91,13 +90,12 @@
 
         <SeekBar
             android:id="@+id/brightnessSeekBar"
-            android:layout_marginVertical="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
             android:max="255"
             android:progress="122"
             android:progressDrawable="@drawable/custom_seekbar"
-            android:thumb="@drawable/custom_thumb"
-            />
+            android:thumb="@drawable/custom_thumb" />
     </RelativeLayout>
 </RelativeLayout>
