--- a/app/src/main/res/layout/bottom_search_menu.xml
+++ b/app/src/main/res/layout/bottom_search_menu.xml
@@ -31,29 +31,29 @@
             android:id="@+id/mainIcons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:elevation="5dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintStart_toStartOf="@id/mainSearchView"
-            app:layout_constraintTop_toTopOf="@id/mainSearchView"
-            android:layout_marginStart="12dp"
-            android:elevation="5dp">
+            app:layout_constraintTop_toTopOf="@id/mainSearchView">
+
             <ImageView
                 android:id="@+id/backIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/self_search"
                 android:src="@drawable/round_arrow_back"
-                app:tint="@color/secondaryText"
                 android:visibility="gone"
-                />
+                app:tint="@color/secondaryText" />
+
             <ImageView
                 android:id="@+id/searchIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/self_search"
                 android:src="@drawable/ic_baseline_search"
-                app:tint="@color/secondaryText"
-                />
+                app:tint="@color/secondaryText" />
         </LinearLayout>
 
 
@@ -63,11 +63,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="10dp"
+            android:background="@null"
             android:elevation="5dp"
             android:hint="@string/type_product"
-            android:textColorHint="@color/secondaryText"
             android:textColor="@color/primaryText"
-            android:background="@null"
+            android:textColorHint="@color/secondaryText"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintEnd_toStartOf="@id/barcodeIcon"
@@ -78,10 +78,10 @@
             android:id="@+id/buttonsContainer"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:paddingEnd="4dp"
             android:elevation="12dp"
             android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingEnd="4dp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintEnd_toEndOf="@id/mainSearchView"
@@ -110,7 +110,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/baseline_add_white"
                 android:visibility="gone"
-                app:tint="@color/purple"/>
+                app:tint="@color/purple" />
 
             <ImageView
                 android:id="@+id/selfSearchIcon"
@@ -146,10 +146,10 @@
             android:contentDescription="@string/scan_barcode"
             android:elevation="8dp"
             android:src="@drawable/outline_barcode_scanner"
-            app:tint="@color/secondaryText"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintEnd_toStartOf="@id/separator"
-            app:layout_constraintTop_toTopOf="@id/mainSearchView" />
+            app:layout_constraintTop_toTopOf="@id/mainSearchView"
+            app:tint="@color/secondaryText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
