--- a/app/src/main/res/layout/consumed_item.xml
+++ b/app/src/main/res/layout/consumed_item.xml
@@ -1,53 +1,52 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
     android:layout_marginStart="4dp"
+    android:layout_marginTop="4dp"
     android:layout_marginEnd="4dp"
-    android:id="@+id/main"
+    android:layout_marginBottom="4dp"
+    android:background="@drawable/list_item_background_with_ripple"
     android:clickable="true"
-    android:focusable="true"
     android:descendantFocusability="blocksDescendants"
-    android:background="@drawable/list_item_background_with_ripple">
+    android:focusable="true"
+    android:padding="8dp">
 
     <TextView
-    android:id="@+id/productNameTextView"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:text="@string/ex_product_name"
+        android:id="@+id/productNameTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:gravity="start"
+        android:text="@string/ex_product_name"
         android:textColor="@color/primaryText"
         android:textSize="16sp"
-        android:gravity="start"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/caloriesContainer"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/productUnitContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="4dp"
         android:gravity="start|center_vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/productNameTextView"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/caloriesContainer"
-        android:layout_marginTop="4dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/productNameTextView">
 
         <ImageView
             android:id="@+id/productUnitImageView"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_scale"
+            android:layout_marginEnd="4dp"
             android:contentDescription="@string/measure"
             android:scaleType="fitCenter"
-            android:layout_marginEnd="4dp"
+            android:src="@drawable/ic_scale"
             app:tint="@color/secondaryText" />
 
         <TextView
@@ -63,38 +62,38 @@
         android:id="@+id/caloriesContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:minWidth="70dp"
         android:background="@drawable/rounded_background_tertiary"
+        android:gravity="center"
+        android:minWidth="70dp"
+        android:orientation="vertical"
+        android:paddingStart="12dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/productCalorieValueTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ex_calories"
-            android:textSize="22sp"
-            android:textColor="@color/primaryText"
+            android:layout_gravity="center"
             android:fontFamily="sans-serif-medium"
             android:includeFontPadding="false"
-            android:layout_gravity="center" />
+            android:text="@string/ex_calories"
+            android:textColor="@color/primaryText"
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/calorieLabelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calories"
-            android:textSize="10sp"
-            android:textColor="@color/secondaryText"
-            android:fontFamily="sans-serif-light"
             android:layout_gravity="center"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/calories"
+            android:textColor="@color/secondaryText"
+            android:textSize="10sp"
             tools:ignore="SmallSp" />
     </LinearLayout>
 
