--- a/app/src/main/res/layout/custom_unit_selector.xml
+++ b/app/src/main/res/layout/custom_unit_selector.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:orientation="horizontal"
+    android:background="@drawable/sty_spinner_background"
     android:gravity="center_vertical"
-    android:background="@drawable/sty_spinner_background">
+    android:orientation="horizontal">
 
     <Spinner
         android:id="@+id/spinner_unit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:minHeight="48dp"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:minHeight="48dp" />
 
 
     <EditText
@@ -22,21 +22,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="הכנס מדד חדש"
+        android:imeOptions="actionDone"
         android:inputType="text"
         android:maxLines="1"
-        android:imeOptions="actionDone"
-        android:visibility="gone"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/icon_edit"
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:layout_marginStart="8dp"
-        android:src="@drawable/pencil"
-        android:contentDescription="ערוך מדדים"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="ערוך מדדים"
         android:padding="4dp"
+        android:src="@drawable/pencil"
         android:visibility="gone"
         app:tint="@color/primaryText" />
 
