--- a/app/src/main/res/layout/dialog_editing_product_consumed.xml
+++ b/app/src/main/res/layout/dialog_editing_product_consumed.xml
@@ -9,132 +9,131 @@
     android:windowSoftInputMode="adjustResize">
     <!--ירוק -   כרטיסיית עריכת מוצר פרטי     -->
     <LinearLayout
-        android:visibility="visible"
         android:id="@+id/editConsumedProductLayout"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/dialog_background">
+        android:background="@drawable/dialog_background"
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/edit_amount"
             android:layout_gravity="center"
+            android:text="@string/edit_amount"
             android:textColor="@color/primaryText"
             android:textSize="20sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/dialogBorder"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:background="@color/dialogBorder" />
 
         <TextView
             android:id="@+id/consumedProductNameTv"
-            android:text="@string/ex_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
-            android:minHeight="32dp"
-            android:layout_marginTop="0dp"
             android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="0dp"
+            android:drawablePadding="5dp"
             android:ems="10"
             android:gravity="start|center_vertical"
-            android:textSize="16sp"
+            android:minHeight="32dp"
+            android:text="@string/ex_product_name"
             android:textColor="@color/primaryText"
+            android:textSize="16sp"
             app:drawableStartCompat="@drawable/ic_baseline_circle"
-            app:drawableTint="@color/primaryText"
-            />
+            app:drawableTint="@color/primaryText" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginTop="22dp"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <TextView
-                android:visibility="gone"
-                android:layout_weight="1"
-                android:text="@string/measure"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="3dp"
-                android:ems="10"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="#000"
+                android:layout_marginHorizontal="3dp"
+                android:layout_weight="1"
                 android:background="@drawable/edit_text_background"
-                />
+                android:ems="10"
+                android:gravity="center"
+                android:text="@string/measure"
+                android:textColor="#000"
+                android:visibility="gone" />
+
             <ImageView
-                android:contentDescription="@string/dot"
-                android:visibility="gone"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_gravity="center"
+                android:contentDescription="@string/dot"
                 android:src="@drawable/ic_baseline_circle"
-                />
+                android:visibility="gone" />
 
             <EditText
-                android:autofillHints="1"
-                android:text="@string/_1"
                 android:id="@+id/consumedProductNewAmountTv"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_marginHorizontal="3dp"
+                android:layout_weight="1"
+                android:autofillHints="1"
+                android:background="@drawable/edit_text_background"
                 android:ems="10"
                 android:gravity="center"
-                android:textColorHint="@color/tertiaryText"
-                android:textColor="@color/primaryText"
-                android:layout_gravity="center"
-                android:textSize="20sp"
-                android:maxLines="1"
                 android:hint="@string/amount"
                 android:inputType="numberDecimal"
-                android:background="@drawable/edit_text_background"
+                android:maxLines="1"
+                android:text="@string/_1"
+                android:textColor="@color/primaryText"
+                android:textColorHint="@color/tertiaryText"
+                android:textSize="20sp"
 
                 />
         </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="25dp">
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="15dp">
+
             <ImageView
                 android:id="@+id/decreaseEditImg"
-                android:layout_toEndOf="@+id/increaseEditImg"
-                android:contentDescription="@string/decrease"
-                android:padding="8dp"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginHorizontal="15dp"
+                android:layout_toEndOf="@+id/increaseEditImg"
                 android:background="@drawable/circle_background_button"
-                android:src="@drawable/ic_baseline_horizontal_rule"
-                />
+                android:contentDescription="@string/decrease"
+                android:padding="8dp"
+                android:src="@drawable/ic_baseline_horizontal_rule" />
+
             <ImageView
                 android:id="@+id/increaseEditImg"
-                android:layout_alignParentStart="true"
-                android:contentDescription="@string/add"
-                android:padding="8dp"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:layout_alignParentStart="true"
                 android:background="@drawable/circle_background_button"
-                android:src="@drawable/ic_baseline_add"
-                />
+                android:contentDescription="@string/add"
+                android:padding="8dp"
+                android:src="@drawable/ic_baseline_add" />
+
             <Button
                 android:id="@+id/saveEdit"
-                android:layout_gravity="center"
-                android:layout_alignParentEnd="true"
                 android:layout_width="120dp"
                 android:layout_height="45dp"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
                 android:background="@drawable/rounded_btn_background"
                 android:text="@string/save_changes"
-                android:textColor="@color/primaryText"
-                />
+                android:textColor="@color/primaryText" />
 
         </RelativeLayout>
 
