--- a/app/src/main/res/layout/dialog_selection_product.xml
+++ b/app/src/main/res/layout/dialog_selection_product.xml
@@ -5,33 +5,34 @@
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:background="@android:color/transparent"
-    android:windowSoftInputMode="adjustResize"
->
+    android:windowSoftInputMode="adjustResize">
 
     <!-- Product Selection Bottom Sheet -->
     <LinearLayout
         android:id="@+id/ly_productSelectionBottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="@drawable/dialog_background"
-        android:elevation="8dp">
+        android:elevation="8dp"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_product"
             android:layout_gravity="center"
+            android:text="@string/add_product"
             android:textColor="@color/primaryText"
             android:textSize="20sp"
             android:textStyle="bold"
 
             />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/dialogBorder"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="15dp"/>/>
+            android:layout_marginBottom="15dp"
+            android:background="@color/dialogBorder" />/>
 
         <!-- Calories Display Header -->
         <TextView
@@ -50,8 +51,8 @@
             android:id="@+id/rl_productInfoSection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
             android:layout_marginHorizontal="3dp"
+            android:layout_marginTop="0dp"
             android:background="@drawable/edit_text_background">
 
             <!-- Selected Product Name -->
@@ -60,13 +61,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_centerHorizontal="true"
-                android:paddingHorizontal="30dp"
-                android:text="@string/product"
-                android:textSize="16sp"
-                android:textColor="@color/primaryText"
                 android:gravity="center"
                 android:maxLines="1"
-                android:scrollbars="horizontal" />
+                android:paddingHorizontal="30dp"
+                android:scrollbars="horizontal"
+                android:text="@string/product"
+                android:textColor="@color/primaryText"
+                android:textSize="16sp" />
 
             <!-- Expand More Icon -->
             <ImageView
@@ -81,14 +82,14 @@
             <!-- QR Code Information (Hidden by default) -->
             <TextView
                 android:id="@+id/tv_barcodeInfo"
-                android:paddingStart="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_selectedProductName"
-                android:text="@string/barcode_info"
-                android:textSize="16sp"
-                android:textColor="@color/secondaryText"
                 android:gravity="start"
+                android:paddingStart="8dp"
+                android:text="@string/barcode_info"
+                android:textColor="@color/secondaryText"
+                android:textSize="16sp"
                 android:visibility="gone" />
 
         </RelativeLayout>
@@ -134,9 +135,9 @@
                 android:id="@+id/tv_unit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginHorizontal="3dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="3dp"
+                android:layout_weight="1"
                 android:background="@drawable/edit_text_background"
                 android:gravity="center"
                 android:text="@string/measure"
@@ -170,13 +171,13 @@
                 android:id="@+id/iv_decreaseAmount"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_toEndOf="@id/iv_increaseAmount"
                 android:layout_marginHorizontal="15dp"
+                android:layout_toEndOf="@id/iv_increaseAmount"
                 android:background="@drawable/circle_background_button"
                 android:contentDescription="@string/minus_icon"
                 android:padding="8dp"
                 android:src="@drawable/ic_baseline_horizontal_rule"
-                app:tint="@color/primaryText"/>
+                app:tint="@color/primaryText" />
 
             <!-- Add to Consumption Button -->
             <Button
