--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,50 +1,50 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
     android:layout_marginStart="4dp"
+    android:layout_marginTop="4dp"
     android:layout_marginEnd="4dp"
-    android:id="@+id/main"
+    android:layout_marginBottom="4dp"
+    android:background="@drawable/list_item_background"
     android:clickable="true"
+    android:descendantFocusability="blocksDescendants"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
-    android:descendantFocusability="blocksDescendants"
-    android:background="@drawable/list_item_background">
-<LinearLayout
-    android:id="@+id/icons_container"
-    android:layout_width="wrap_content"
-    android:layout_height="0dp"
-    android:orientation="vertical"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:layout_marginEnd="0dp">
+    android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/starIcon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/round_star"
-        android:contentDescription="@string/measure"
-        android:scaleType="fitCenter"
-        android:layout_marginEnd="4dp"
-        app:tint="@color/star" />
+    <LinearLayout
+        android:id="@+id/icons_container"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/bookmarkIcon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/round_bookmark"
-        android:contentDescription="@string/measure"
-        android:scaleType="fitCenter"
-        android:layout_marginEnd="4dp"
-        app:tint="@color/tertiary" />
-</LinearLayout>
+        <ImageView
+            android:id="@+id/starIcon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="4dp"
+            android:contentDescription="@string/measure"
+            android:scaleType="fitCenter"
+            android:src="@drawable/round_star"
+            app:tint="@color/star" />
+
+        <ImageView
+            android:id="@+id/bookmarkIcon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="4dp"
+            android:contentDescription="@string/measure"
+            android:scaleType="fitCenter"
+            android:src="@drawable/round_bookmark"
+            app:tint="@color/tertiary" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/productNameTextView"
@@ -59,21 +59,21 @@
         app:layout_constraintStart_toEndOf="@+id/icons_container"
         app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/productDescriptionTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/ex_description"
-            android:textColor="@color/secondaryText"
-            android:textSize="12sp"
-            android:layout_marginTop="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            app:layout_constraintTop_toBottomOf="@id/productNameTextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/caloriesContainer"
-            android:layout_marginEnd="8dp"
-            android:visibility="gone"/>
+    <TextView
+        android:id="@+id/productDescriptionTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="@string/ex_description"
+        android:textColor="@color/secondaryText"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toStartOf="@id/caloriesContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/productNameTextView" />
 
     <LinearLayout
         android:id="@+id/productUnitContainer"
@@ -106,54 +106,58 @@
             android:textSize="14sp" />
     </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/caloriesContainer"
+    <LinearLayout
+        android:id="@+id/caloriesContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:minWidth="70dp"
+        android:orientation="vertical"
+        android:paddingStart="12dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/productCalorieValueTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:minWidth="70dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_gravity="center"
+            android:fontFamily="sans-serif-medium"
+            android:includeFontPadding="false"
+            android:text="@string/ex_calories"
+            android:textColor="@color/primaryText"
+            android:textSize="22sp" />
 
-            <TextView
-                android:id="@+id/productCalorieValueTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ex_calories"
-                android:textSize="22sp"
-                android:textColor="@color/primaryText"
-                android:fontFamily="sans-serif-medium"
-                android:includeFontPadding="false"
-                android:layout_gravity="center" />
+        <TextView
+            android:id="@+id/calorieLabelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/calories"
+            android:textColor="@color/secondaryText"
+            android:textSize="10sp"
+            tools:ignore="SmallSp" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/calorieLabelTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/calories"
-                android:textSize="10sp"
-                android:textColor="@color/secondaryText"
-                android:fontFamily="sans-serif-light"
-                android:layout_gravity="center"
-                tools:ignore="SmallSp" />
-        </LinearLayout>
-
-    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
